[metadata]
name = mrsegmentator
version = 1.0.7
author = Hartmut Häntze
author_email = hartmut.haentze@charite.de
description = Robust Multi-Modality Segmentation of 40 Classes in MRI and CT Sequences
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/hhaentze/mrsegmentator
project_urls =
    Bug Tracker = https://github.com/hhaentze/mrsegmentator/issues
    repository = https://github.com/hhaentze/mrsegmentator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    nnunetv2 == 2.2.1
    argparse

[options.packages.find]
where = src
exclude =
    bundles*
    data*
    logs*
    metadata*
    model*
    notebooks*
    scripts*

[options.entry_points]
console_scripts =
    mrsegmentator = mrsegmentator.main:main

[flake8_nb]
max-line-length = 120 
select = C,E,F,W,B
extend-ignore = 
	# disable E203 (whitespace before :) because it is not PEP8 and Black compliant
	E203,
	# disable E114 (indentation is not a multiple of four) because of a bug in flake8_nb where it sees empty lines as comment lines
	E114,
	# line break before binary operator. Deactivated because of incompatibility with black
  	W503,
	# lambda expressions can be a good alternative to small single use functions
	E731
import_order_style = appnexus
exclude =
    .git,
    .eggs/,
    __pycache__,
    .ipynb_checkpoints,
    */tmp_*,
    */temp_*,
    build/,
    dist/,
    data/,
    data_local/,
    data_test/,
    deprecated,
    logs/,
    notebooks/project_stage_1,
    wandb,
    ./raidiance/annot/DicomViewer,
    .venv,
    runs/